# First-Homology-Group-of-Hexahedral-Mesh

./: CMakeLists.txt  README.md  draw_surface_mesh.cpp  drawdart.h  geometry.h  judgegenus.h  loop.h  mesh.h  readmesh.cpp  readmesh.h  untitled.mlx
exe/: hh.hex
